tests/test_assets/semantic/invalid/raw_pointers/postfix_increment_operand.cog
test::(pointer: i32*) -> void {
    *pointer++;
}
