tests/test_assets/semantic/invalid/raw_pointers/postfix_increment_operand.expected
semantic error at line 2: increment/decrement cannot be used as a value; it is a statement
1 semantic error generated.
